# SideProject

Bootloader/: BOOT.c  BOOT.h  Button.c  Button.h  Parse_srec.c  Parse_srec.h  Queue.c  Queue.h  UART0_Init.c  UART0_Init.h  main.c
CaroGame/: BOT.cpp  BOT.h  CaroGame.aps  CaroGame.sln  CaroGame.vcxproj  CaroGame.vcxproj.filters  game.cpp  game.h  game.txt  main.cpp  menu.cpp  menu.h  player.cpp  player.h  player.txt  resource.h
CaroGame/Debug/: CaroGame.exe.recipe  CaroGame.ilk  CaroGame.vcxproj.FileListAbsolute.txt  vc142.idb
CaroGame/Debug/CaroGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CaroGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Embedded/PIC C/Test1/: BlinkLed.uvgui.ADMIN88  BlinkLed.uvgui_ADMIN88.bak
Embedded/Proteus/CAN/: New Project.pdsprj.TONY.ADMIN88.workspace
FatfileReader/: HAL.c  HAL.h  display.c  display.h  main.c  read_file.c  read_file.h
Qt/CloseEvent/: mainwindow.cpp
Qt/Gui/: CMakeLists.txt  Main.qml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/QAction/: IconPNG.qrc  QAction.pro  dialog1.cpp  dialog1.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/QMessageBox/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/QString/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/QTimer/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/SignalAndSlot/: mainwindow.cpp  mainwindow.ui
Qt/helloWorld/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Socket/BasicSocketLinux/: client.cpp  server.cpp
(+84 files in other folders)
